# stella-implementation-in-cpp

./: CMakeLists.txt  README.md
src/: VisitTypeCheck.cpp
src/VisitTypeCheckUtils/: StellaExpression.h  StellaFunction.cpp  StellaFunction.h  StellaType.cpp  StellaType.h
src/VisitTypeCheckUtils/StellaExpressions/: StellaAbstractionExpression.cpp  StellaApplicationExpression.cpp  StellaAssignmentExpression.cpp  StellaConditionExpression.cpp  StellaConstBoolExpression.cpp  StellaConstIntExpression.cpp  StellaConstUnitExpression.cpp  StellaDerefExpression.cpp  StellaDotRecordExpression.cpp  StellaDotTupleExpression.cpp  StellaInlInrExpression.cpp  StellaMatchCaseExpression.cpp  StellaMatchExpression.cpp  StellaNatRecExpression.cpp  StellaPanicExpression.cpp  StellaPatternInlInrExpression.cpp  StellaPatternVarExpression.cpp  StellaRecordExpression.cpp  StellaRefExpression.cpp  StellaSequenceExpression.cpp  StellaSuccExpression.cpp  StellaTupleExpression.cpp  StellaTypeAbstractionExpression.cpp  StellaTypeApplicationExpression.cpp  StellaVarExpression.cpp
tests/records/well-typed/: records-2.stella
tests/references/well-typed/: refs-3.stella
tests/subtyping/ill-typed/: bad-subtyping-4.stella
tests/well-typed/: higher-order-1.stella  inl-inr.stella  pairs.stella  panic.stella  record.stella  ref.stella  sequence.stella  sum-inl-inr.stella  sum-match.stella  unit-type.stella
